5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1684_1105.log
== TEST (2019-04-28 01:19:14) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada ",x)

if(x == lobo):
	print("Casa: Stark")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(x == lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 01:19:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada ",x)

if(x == "lobo"):
	print("Casa: Stark")


-- OUTPUT:
Entrada  lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 01:20:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada: ",x)

if(x == "lobo"):
	print("Casa: Stark")


-- OUTPUT:
Entrada:  lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 01:28:56) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada: ",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lennister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")


-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 01:29:19) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada: ",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lennister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")


-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 01:29:28) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada: ",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lennister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")


-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 01:29:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao: ")
print("Entrada: ",x)

if(x == "lobo"):
	print("Casa: Stark")
elif(x == "leao"):
	print("Casa: Lennister")
elif(x == "veado"):
	print("Casa: Baratheon")
elif(x == "dragao"):
	print("Casa: Targaryen")
elif(x == "rosa"):
	print("Casa: Tyrell")
elif(x == "sol"):
	print("Casa: Martell")
elif(x == "lula"):
	print("Casa: Greyjoy")
elif(x == "esfolado"):
	print("Casa: Bolton")
elif(x == "turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")


-- EXECUTION TIME:
0.160496
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
